fixing spacing

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -113,7 +113,7 @@ h6 {
 }
 p {
   font-family: var(--font_body);
-  font-size: 0.75rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 150%;
   max-width: 65ch;
@@ -122,18 +122,18 @@ p {
 
 @media (min-width: 800px) {
   h1 {
-    font-size: 6rem;
-  }
-  h2 {
     font-size: 4rem;
   }
-  h3 {
+  h2 {
     font-size: 3rem;
   }
-  h4 {
+  h3 {
     font-size: 2.5rem;
   }
+  h4 {
+    font-size: 2rem;
+  }
   h5 {
-    font-size: 2.25rem;
+    font-size: 1.75rem;
   }
 }
